Fixed form hidden behind images bug

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -116,6 +116,7 @@ h1 {
   border: 2px solid black;
   border-radius: 8px;
   text-align: center;
+  z-index: 2;
 }
 .userRegistrationBox {
   display: none;
@@ -129,6 +130,7 @@ h1 {
   top: 50%;
   background: #ffffff;
   text-align: center;
+  z-index: 2;
 }
 .user-action input {
   margin-top: 5px;
@@ -145,7 +147,7 @@ h1 {
   height: 250px;
   width: 250px;
   border: 2px solid black;
-  background-color: rgba(200, 200, 200, 0.5)
+  background-color: rgba(200, 200, 200, 0.5);
 }
 .jumbotron {
   background: none;
